--- a/Presupuestos/index.html
+++ b/Presupuestos/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Presupuestos - Luis Shelo Proyect</title>
+  <link rel="stylesheet" href="../shared-styles.css">
   <link rel="stylesheet" href="styles.css">
   <script src="presupuestos.js" defer></script>
 </head>
