feat: Implementar navbar universal dinámico y eliminar estilos duplicados

--- a/Home/index.html
+++ b/Home/index.html
@@ -6,18 +6,11 @@
   <title>Home - Luis Shelo Proyect</title>
   <link rel="stylesheet" href="../shared-styles.css">
   <link rel="stylesheet" href="./styles.css">
+  <script src="../shared-navbar.js"></script>
 </head>
 <body>
-  <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li class="dropdown">
-        <a href="../Ocio/index.html" class="dropdown-toggle">Ocio</a>
-        <ul class="dropdown-menu">
-          <li><a href="../Ocio/index.html#juegos">Juegos</a></li>
-          <li><a href="../Ocio/index.html#libros">Libros</a></li>
-          <li><a href="../Ocio/index.html#series">Series</a></li>
-          <li><a href="../Ocio/index.html#animes">Animes</a></li>
+  <!-- Navbar universal se genera automáticamente -->
+  <div id="navbar-container"></div>
         </ul>
       </li>
       <li><a href="../Presupuestos/index.html">Presupuestos</a></li>
