--- a/Presupuestos/index.html
+++ b/Presupuestos/index.html
@@ -6,26 +6,12 @@
   <title>Presupuestos - Luis Shelo Proyect</title>
   <link rel="stylesheet" href="../shared-styles.css">
   <link rel="stylesheet" href="styles.css">
+  <script src="../shared-navbar.js"></script>
   <script src="presupuestos.js" defer></script>
 </head>
 <body>
-  <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="../Home/index.html">Home</a></li>
-      <li class="dropdown">
-        <a href="../Ocio/index.html" class="dropdown-toggle">Ocio</a>
-        <ul class="dropdown-menu">
-          <li><a href="../Ocio/index.html#juegos">Juegos</a></li>
-          <li><a href="../Ocio/index.html#libros">Libros</a></li>
-          <li><a href="../Ocio/index.html#series">Series</a></li>
-          <li><a href="../Ocio/index.html#animes">Animes</a></li>
-        </ul>
-      </li>
-      <li><a href="index.html" class="active">Presupuestos</a></li>
-      <li><a href="../Proyecto/index.html">Proyecto</a></li>
-      <li><a href="../Yeni 💞/index.html">💞Yeni💞</a></li>
-    </ul>
-  </nav>
+  <!-- Navbar universal se genera automáticamente -->
+  <div id="navbar-container"></div>
 
 
 
