--- a/Yeni 💞/index.html
+++ b/Yeni 💞/index.html
@@ -4,26 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>💞Yeni💞 - Luis Shelo Proyect</title>
+  <link rel="stylesheet" href="../shared-styles.css">
   <link rel="stylesheet" href="styles.css">
+  <script src="../shared-navbar.js"></script>
 </head>
 <body>
-  <nav class="navbar">
-    <ul class="nav-links">
-      <li><a href="../Home/index.html">Home</a></li>
-      <li class="dropdown">
-        <a href="../Ocio/index.html" class="dropdown-toggle">Ocio</a>
-        <ul class="dropdown-menu">
-          <li><a href="../Ocio/index.html#juegos">Juegos</a></li>
-          <li><a href="../Ocio/index.html#libros">Libros</a></li>
-          <li><a href="../Ocio/index.html#series">Series</a></li>
-          <li><a href="../Ocio/index.html#animes">Animes</a></li>
-        </ul>
-      </li>
-      <li><a href="../Presupuestos/index.html">Presupuestos</a></li>
-      <li><a href="../Proyecto/index.html">Proyecto</a></li>
-      <li><a href="index.html" class="active">💞Yeni💞</a></li>
-    </ul>
-  </nav>
+  <!-- Navbar universal se genera automáticamente -->
+  <div id="navbar-container"></div>
 
 
   <div class="content">
