feat: Enhance server startup scripts and project structure validation
- Updated `servidor.bat` to include directory checks and improved error messages.
- Added `iniciar-servidor.ps1` for PowerShell users with comprehensive project structure validation.
- Introduced `inicio-rapido.sh` for quick server startup across different OS environments.
- Enhanced `shared-navbar.js` with better path detection and improved navbar generation.
- Expanded `shared-styles.css` with section-specific styles and animations.
- Created `index.html` as the main entry point for the project.

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../shared-styles.css">
   <link rel="stylesheet" href="styles.css">
   <script src="../shared-navbar.js"></script>
+  <script src="proyecto.js" defer></script>
 </head>
 <body>
   <!-- Navbar universal se genera automáticamente -->
@@ -20,7 +21,70 @@
 
     <main>
       <section>
-        <p>Gestión de Proyectos.</p>
+        <p>Gestión de Proyectos Tecnológicos</p>
+        
+        <div class="projects-grid">
+          <div class="project-card">
+            <h3>🌐 Luis Shelo Project</h3>
+            <p><strong>Descripción:</strong> Plataforma web personal con navegación dinámica, gestión de presupuestos, catálogo de entretenimiento y sección especial.</p>
+            <p><strong>Tecnologías:</strong></p>
+            <div class="project-tech">
+              <span class="tech-tag">HTML5</span>
+              <span class="tech-tag">CSS3</span>
+              <span class="tech-tag">JavaScript</span>
+              <span class="tech-tag">Python Server</span>
+            </div>
+            <p><strong>Estado:</strong> <span class="project-status active">En Desarrollo</span></p>
+          </div>
+
+          <div class="project-card">
+            <h3>💡 Sistema de Temas Dinámicos</h3>
+            <p><strong>Descripción:</strong> Implementación de navbar y cards con temas personalizados por sección (futurista, morado, atardecer).</p>
+            <p><strong>Características:</strong> Animaciones CSS, efectos neón, gradientes temáticos.</p>
+            <div class="project-tech">
+              <span class="tech-tag">CSS Animations</span>
+              <span class="tech-tag">JavaScript</span>
+              <span class="tech-tag">Responsive Design</span>
+            </div>
+            <p><strong>Estado:</strong> <span class="project-status completed">Completado</span></p>
+          </div>
+
+          <div class="project-card">
+            <h3>📊 Gestor de Presupuestos</h3>
+            <p><strong>Descripción:</strong> Sistema completo de gestión financiera con categorías, localStorage y interfaz interactiva.</p>
+            <p><strong>Funcionalidades:</strong> CRUD de gastos, totalizadores automáticos, persistencia de datos.</p>
+            <div class="project-tech">
+              <span class="tech-tag">LocalStorage</span>
+              <span class="tech-tag">JavaScript ES6</span>
+              <span class="tech-tag">DOM Manipulation</span>
+            </div>
+            <p><strong>Estado:</strong> <span class="project-status active">Funcionando</span></p>
+          </div>
+
+          <div class="project-card">
+            <h3>🎮 Catálogo de Entretenimiento</h3>
+            <p><strong>Descripción:</strong> Base de datos interactiva de juegos y libros con lazy loading, filtros y cards animadas.</p>
+            <p><strong>Características:</strong> Optimización de imágenes, estados de progreso, sinopsis expandibles.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Intersection Observer</span>
+              <span class="tech-tag">Lazy Loading</span>
+              <span class="tech-tag">CSS Grid</span>
+            </div>
+            <p><strong>Estado:</strong> <span class="project-status active">En Uso</span></p>
+          </div>
+
+          <div class="project-card">
+            <h3>🚀 Futuras Mejoras</h3>
+            <p><strong>Descripción:</strong> Roadmap de funcionalidades pendientes y mejoras planificadas para el proyecto.</p>
+            <p><strong>Ideas:</strong> Backend con base de datos, API REST, autenticación, dashboard avanzado.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Node.js</span>
+              <span class="tech-tag">Database</span>
+              <span class="tech-tag">API Design</span>
+            </div>
+            <p><strong>Estado:</strong> <span class="project-status planning">Planificando</span></p>
+          </div>
+        </div>
       </section>
     </main>
 
