--- a/Yeni 💞/index.html
+++ b/Yeni 💞/index.html
@@ -14,18 +14,52 @@
 
 
   <div class="content">
-    <header>
+    <header class="yeni-header">
       <h1>Para mi amor</h1>
     </header>
 
-    <main>
-      <section>
-        <p>Gestión de Proyectos.</p>
-      </section>
+    <main class="yeni-main">
+      <div class="yeni-cards-grid">
+        
+        <!-- Card 1: Salidas -->
+        <div class="yeni-card">
+          <h2>💕 Salidas 💕</h2>
+          <p class="card-description">Aventuras juntos, explorando nuevos lugares y creando memorias inolvidables</p>
+          <button class="yeni-btn">Ver más</button>
+        </div>
+
+        <!-- Card 2: Cinema -->
+        <div class="yeni-card">
+          <h2>🎬 Cinema 🎬</h2>
+          <p class="card-description">Noches de películas románticas, palomitas y momentos especiales en el cine</p>
+          <button class="yeni-btn">Ver más</button>
+        </div>
+
+        <!-- Card 3: Caja Sorpresa -->
+        <div class="yeni-card">
+          <h2>🎁 Caja Sorpresa 🎁</h2>
+          <p class="card-description">Sorpresas especiales, regalos únicos y detalles que demuestran mi amor</p>
+          <button class="yeni-btn">Ver más</button>
+        </div>
+
+        <!-- Card 4: Cenas Románticas -->
+        <div class="yeni-card">
+          <h2>🍽️ Cenas Románticas 🍽️</h2>
+          <p class="card-description">Cenas íntimas, restaurantes especiales y comidas preparadas con amor</p>
+          <button class="yeni-btn">Ver más</button>
+        </div>
+
+      </div>
     </main>
 
-  <footer>
-    <p>&copy; 2025 Luis Rosales Proyect - Todos los derechos reservados</p>
+  </div>
+
+  <footer class="yeni-footer">
+    <div class="footer-dates">
+      <p class="main-date">💕 21 de Marzo del 2024 💕</p>
+      <p class="secondary-date">🌹 10 de Abril del 2024 🌹</p>
+    </div>
+    <p class="footer-copyright">© 2025 Luis Rosales Project - Todos los derechos reservados</p>
   </footer>
 </body>
 </html>
